 - fix #3739 (apply impulse to aircraft)
 - fix #3614 (units stuck on narrow terrain passages)
 - fix #3736 (TextureAtlas crash)
 - fix #3643 (get PFS and CD to agree regarding factories)
 - fix #3655 (UnitDef::canMove misinterpreted by factory CAI code)
 - fix #3662
 - fix #3633 (non-3DO projectile models not being rendered fully)
 - fix #3598 ("vibrating" units)
 - fix #3637 (desyncs due to not versioning cache-data, also #3692)
 - fix #3617 (ship transports can't load units)
 - fix #3686 (free flying ground units follow terrain slope)
 - fix #3697
     Spring.GetPositionLosState now returns a 4th argument which indicates
     if a position is actively being radar- or sonar-jammed by any allyteam
 - fix #3683 (minimap textures not freed on exit)
 - fix #3660 (memory leak in Spring.GetVisibleFeatures)
 - fix #3718 (units moving in circles near obstacles)
 - fix ground units not moving in FPS mode
 - fix (non-hovering) aircraft jittering at high altitude
 - fix #3743 (partially: make non-hovering aircraft start turning to goal during takeoff)
 - fix submarines being considered "underwater" even when pos.y + height > 0
 - fix subtle bug in LegacyAtlasAlloc::Allocate exposed by Intel GMA
     atlas could grow LARGER than its maximum size in x-dimension due to TEXMARGIN not being considered
     3DO texture atlas has a maximum size of 2048 pixels but grew to 2050 pixels in at least one *A game
     on Intel hardware with maxTextureSize=2048 this caused driver memory corruption --> random crashes
 - fix units switching team-colors
 - fix debug-vectors for ground units being drawn even when not cheating or not spectating
 - fix LoadScreen exception being thrown just for failing to load a startpic
 - fix crash in Spring.GetVisibleUnits on bad teamID value
 - fix C stack overflow in Shard
 - fix logLevel of WatchDog stacktraces
 - fix decals were rendered twice
 - fix spike CEGs

-- 94.1 ---------------------------------------------------------
 - bump path cache version
